Update move