@@ -6,7 +6,6 @@ import be.kuleuven.assemassit.Domain.Enums.WorkPostType;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class WorkPost {
   private int id;
@@ -31,11 +30,11 @@ public class WorkPost {
     return this.workPostType;
   }
 
-  public void addProcessToWorkPost(CarAssemblyProcess carAssemblyProcess){
-      this.carAssemblyProcess = carAssemblyProcess;
+  public void addProcessToWorkPost(CarAssemblyProcess carAssemblyProcess) {
+    this.carAssemblyProcess = carAssemblyProcess;
   }
 
-  public List<AssemblyTaskType> getAssemblyTaskTypes(){
+  public List<AssemblyTaskType> getAssemblyTaskTypes() {
     return assemblyTaskTypes;
   }
 
@@ -47,7 +46,7 @@ public class WorkPost {
     return this.expectedWorkPostDurationInMinutes;
   }
 
-  public CarAssemblyProcess removeProcessFromWorkPost(){
+  public CarAssemblyProcess removeProcessFromWorkPost() {
     CarAssemblyProcess temporaryProcess = this.carAssemblyProcess;
     this.carAssemblyProcess = null;
     return temporaryProcess;
@@ -59,16 +58,20 @@ public class WorkPost {
 
   public void setActiveAssemblyTask(int assemblyTaskId) {
     this.activeAssemblyTask = findAssemblyTask(assemblyTaskId);
-    if(activeAssemblyTask == null){
+    if (activeAssemblyTask == null) {
       throw new IllegalArgumentException("There is no Assembly Task with that id.");
     }
   }
 
-  public List<AssemblyTask> getAllAssemblyTasks(){
+  public void removeActiveAssemblyTask() {
+    this.activeAssemblyTask = null;
+  }
+
+  public List<AssemblyTask> getWorkPostAssemblyTasks() {
     if (carAssemblyProcess == null)
       return new ArrayList<>();
 
-    return carAssemblyProcess.getAssemblyTasks().stream().filter(e1 -> assemblyTaskTypes.contains(e1.getAssemblyTaskType())).collect(Collectors.toList());
+    return carAssemblyProcess.getAssemblyTasks().stream().filter(task -> assemblyTaskTypes.contains(task.getAssemblyTaskType())).toList();
   }
 
   public List<AssemblyTask> givePendingAssemblyTasks() {
@@ -76,10 +79,8 @@ public class WorkPost {
       return new ArrayList<>();
 
     List<AssemblyTask> tasks = carAssemblyProcess.getAssemblyTasks();
-    tasks =  tasks.stream().filter(e1 -> assemblyTaskTypes.contains(e1.getAssemblyTaskType())).collect(Collectors.toList());
-    return tasks.stream()
-      .filter(at -> at.getPending())
-      .collect(Collectors.toList());
+    List<AssemblyTask> filteredTasks = tasks.stream().filter(task -> assemblyTaskTypes.contains(task.getAssemblyTaskType())).toList();
+    return filteredTasks.stream().filter(AssemblyTask::getPending).toList();
   }
 
   public void completeAssemblyTask() {
@@ -92,11 +93,11 @@ public class WorkPost {
       .getAssemblyTasks()
       .stream()
       .filter(p -> assemblyTaskTypes.contains(p.getAssemblyTaskType()))
-      .collect(Collectors.toList());
+      .toList();
 
     if (assemblyTasksFromWorkPost.size() == 0) return 0;
 
-    return (int)Math.floor(expectedWorkPostDurationInMinutes / assemblyTasksFromWorkPost.size() * assemblyTasksFromWorkPost.stream().filter(wp -> wp.getPending()).count());
+    return (int) Math.floor(expectedWorkPostDurationInMinutes / assemblyTasksFromWorkPost.size() * assemblyTasksFromWorkPost.stream().filter(wp -> wp.getPending()).count());
   }
 
   public boolean canPerformTasksForProcess(CarAssemblyProcess carAssemblyProcess) {
